/iTrade/ChangeLog
===============================================================================

On the road for v0.4.6 (Nausicaa2)

===============================================================================

2007-02-17  Gilles Dumortier <dgil at ieee.org>
	* Rewrote itrade_wxportfolio forms using iTradeSizedDialog
	* Switch to wxPython 2.8.x - (2.6.x is not supported anymore because of
	  specific new features we will use - like SizedControls)

2007-02-12  Gilles Dumortier <dgil at ieee.org>
	* Fortuneo plugin : handle redirection (302) - but connector still not
          working because of new scheme under investigation

2007-02-11  Gilles Dumortier <dgil at ieee.org>
	* Switch to matplotlib 0.90.x

2007-02-10  Gilles Dumortier <dgil at ieee.org>
	* Split forum : French vs English

2007-02-09  Gilles Dumortier <dgil at ieee.org>
	* Stops View : some words are not translated (SF bug 1653527)
	* r560 (-x) : Caching menu :Can't erase History... (SF bug 1656130)
	* Popup Matrix-Portfolio view : Inversion operations (SF bug 1655908)

2007-02-06  Michel Legrand <m_leg at users.sourceforge.net>
	* More Portuguese translations

2007-02-04  Gilles Dumortier <dgil at ieee.org>
	* new tarball
	* r556 (-x) Money management-Attribute Error (SF bug 1651923)
	* Finish add/remove/edit stops (SF bug 1302894)
	* Operations screen : use the NumCtrl object
	* UnicodeDecodeError when click on News (SF bug 1651029)

2007-02-03  Gilles Dumortier <dgil at ieee.org>
	* Working on add/remove/edit stops (SF bug 1302894)

2007-02-01  Gilles Dumortier <dgil at ieee.org>
	* New tarball

2007-01-31  Gilles Dumortier <dgil at ieee.org>
	* convert from iso-8859-1 to unicode *.messages.txt during reading
	* Lang was not correctly set for the Tabs (-x mode)
	* Open new file : live connector not correct (SF bug 1644602)
	* MessageBox use user local, not itrade current locale (SF bug 1646074)
	* Finish MessageDialog conversion to HTMLDialog

2007-01-30  Gilles Dumortier <dgil at ieee.org>